OP-991 launch menu search box is no longer cut off in ie

--- a/web-app/themes/common/stylesheets/_widgetLauncher.scss
+++ b/web-app/themes/common/stylesheets/_widgetLauncher.scss
@@ -171,6 +171,7 @@
         background: $widget-launcher-search-background-color;
         @include border-radius(15px);
         width: 300px;
+        padding-top: 2px;
         input{
             color: $widget-launcher-widget-text-color;
         }
@@ -181,16 +182,12 @@
         background: transparent;
         filter: none;
         border-style: none;
-        padding: 0px 2px;
+        padding: 0px 5px 5px 5px;
         .x-box-inner{
             background: transparent;
             filter: none;
             border-style: none;
         }
-    }
-
-    .searchBar {
-        padding: 0px 5px;
     }
 	
 	.x-window-header {
